Trunk: merged EXP-hybens at r17398 to the trunk.  This merge brings in the rest of the changes for the Q3FY12 global implementation.  Additional work includes: 1) The inclusion of ATMS and GOES-15 radiance data 2) Generalization of the sat wind reading routines 3) A new fixed file for the ATMS filtering (atms_beamwidth.txt, requiring script changes) 4) Bug and script fixes
git-svn-id: https://svnemc.ncep.noaa.gov/projects/gsi/trunk/src@17533 281fb692-3a18-0410-826d-9e847983f365

--- a/makefile_DTC
+++ b/makefile_DTC
@@ -82,6 +82,7 @@ LIBsys          = $(MYLIBsys)
 	antest_maps0.o \
 	antest_maps0_glb.o \
 	aod_mod.o \
+        atms_spatial_average_mod.o \
 	balmod.o \
 	berror.o \
 	bias_predictors.o \
@@ -290,6 +291,7 @@ LIBsys          = $(MYLIBsys)
 	read_airs.o \
 	read_amsre.o \
 	read_anowbufr.o \
+	read_atms.o \
 	read_avhrr.o \
 	read_avhrr_navy.o \
 	read_bufrtovs.o \
