Trunk: Reintegration merge of branch RR_enhancement_trac228a at r25093.  This update is for Rapid Refresh only.  These changes will be implemented in RAP version 2. The major changes for this update are:
 *  Add soil temperature and moisture nudging based on the first level atmosphere analysis increments
 *  METAR partial cloud in the cloud analysis
 *  update the surface 2-m temperature based on the 1st level temperature analysis increment.

The following changes have been made:

 * SRC:
  * gridmod.F90
  * gsd_update_mod.f90
  * gsdcloudanalysis.F90
  * gsimod.F90
  * guess_grids.F90
  * makefile_DTC
  * rapidrefresh_cldsurf_mod.f90
  * read_Lightning.f90
  * read_prepbufr.f90
  * read_wrf_mass_guess.F90
  * reorg_metar_cloud.f90
  * update_guess.f90
  * wrf_binary_interface.F90
  * wrf_netcdf_interface.F90
  * wrwrfmassa.F90



git-svn-id: https://svnemc.ncep.noaa.gov/projects/gsi/trunk/src@25167 281fb692-3a18-0410-826d-9e847983f365

--- a/makefile_DTC
+++ b/makefile_DTC
@@ -137,6 +137,7 @@ LIBsys          = $(MYLIBsys)
 	fill_mass_grid2.o \
 	fill_nmm_grid2.o \
 	fpvsx_ad.o \
+        general_commvars_mod.o \
 	general_read_gfsatm.o \
 	general_read_nmmb.o \
 	general_specmod.o \
@@ -164,7 +165,6 @@ LIBsys          = $(MYLIBsys)
 	glbsoi.o \
 	grtest.o \
 	grdcrd.o \
-	grid2sub.o \
 	gridmod.o \
 	gscond_ad.o \
 	gsd_terrain_match_surfTobs.o \
@@ -185,7 +185,6 @@ LIBsys          = $(MYLIBsys)
 	hybrid_ensemble_isotropic.o \
 	hybrid_ensemble_parameters.o \
 	inc2guess.o \
-	init_commvars.o \
 	init_jcdfi.o \
 	insitu_info.o \
 	int3dvar.o \
@@ -250,6 +249,7 @@ LIBsys          = $(MYLIBsys)
 	mpimod.o \
 	mpl_allreduce.o \
 	mpl_bcast.o \
+        native_endianness.o \
 	ncepgfs_ghg.o \
 	ncepgfs_io.o \
 	ncepnems_io.o \
@@ -413,7 +413,6 @@ LIBsys          = $(MYLIBsys)
 	strong_fast_global_mod.o \
 	strong_slow_global_mod.o \
 	sub2fslab_mod.o \
-	sub2grid.o \
 	support_2dvar.o \
 	stub_set_crtm_aerosol.o \
 	stub_pertmod.o \
