--- a/makefile_DTC
+++ b/makefile_DTC
@@ -22,18 +22,19 @@ EXE_FILE = gsi.exe
 # ---------
 # Libraries
 # ---------
-## LIBmpeu   = -L$(CORELIB) -lmpeu
-LIBbufr   = -L$(CORELIB) -lbufr_i4r8
-LIBw3     = -L$(CORELIB) -lw3_i4r8
-LIBsp     = -L$(CORELIB) -lsp_i4r8
-LIBbacio  = -L$(CORELIB) -lbacio
-LIBsfcio  = -L$(CORELIB) -lsfcio_i4r4
-LIBsigio  = -L$(CORELIB) -lsigio_i4r4
-LIBcrtm   = -L$(CORELIB) -lcrtm
-LIBtransf = -L$(CORELIB) -ltransf
-LIBhermes = -L$(CORELIB) -lhermes
-LIBnemsio = -L$(CORELIB) -lnemsio
-LIBrrcld  = -L$(CORELIB) -lgsdcloud
+## LIBmpeu  = -L$(CORELIB) -lmpeu
+LIBbufr     = -L$(CORELIB) -lbufr_i4r8
+LIBw3       = -L$(CORELIB) -lw3_i4r8
+LIBsp       = -L$(CORELIB) -lsp_i4r8
+LIBbacio    = -L$(CORELIB) -lbacio
+LIBsfcio    = -L$(CORELIB) -lsfcio_i4r4
+LIBsigio    = -L$(CORELIB) -lsigio_i4r4
+LIBcrtm     = -L$(CORELIB) -lcrtm
+LIBtransf   = -L$(CORELIB) -ltransf
+LIBhermes   = -L$(CORELIB) -lhermes
+LIBnemsio   = -L$(CORELIB) -lnemsio
+LIBrrcld    = -L$(CORELIB) -lgsdcloud
+LIBprpdcdr  = -L$(CORELIB) -lprepdecode_i4r8
 
 # --------------------------
 # Default Baselibs Libraries
@@ -72,7 +73,9 @@ LIBsys          = $(MYLIBsys)
 # ------------
 
   OBJS	= \
+        add_gfs_stratosphere.o \
 	adjtest.o \
+	adjtest_obs.o \
 	aeroinfo.o \
         aircraftobsqc.o \
 	anberror.o \
@@ -94,6 +97,7 @@ LIBsys          = $(MYLIBsys)
 	bkgvar.o \
 	bkgvar_rewgt.o \
 	blacklist.o \
+        blendmod.o \
 	calc_fov_conical.o \
 	calc_fov_crosstrk.o \
 	cal_tztr.o \
@@ -162,6 +166,7 @@ LIBsys          = $(MYLIBsys)
 	get_wrf_mass_ensperts_netcdf.o \
 	getuv.o \
 	getvvel.o \
+        gfs_stratosphere.o \
 	glbsoi.o \
 	grtest.o \
 	grdcrd.o \
@@ -298,8 +303,8 @@ LIBsys          = $(MYLIBsys)
 	read_avhrr.o \
 	read_avhrr_navy.o \
 	read_bufrtovs.o \
+        read_co.o \
 	read_cris.o \
-	read_co.o \
 	read_diag.o \
 	read_files.o \
 	read_gfs_ozone_for_regional.o \
@@ -466,7 +471,7 @@ $(LIB):	 $(OBJS)
 	$(AR) -ruv $(LIB) $(OBJS)
 
 $(EXE_FILE):  $(OBJS) $(LIB) gsimain.o
-	$(F90) $(LDFLAGS) -o gsi.exe gsimain.o libgsi.a $(LIBcrtm) $(LIBsfcio) $(LIBsigio) $(LIBnemsio) $(LIBw3) $(LIBbacio) $(LIBbufr) $(LIBsp) $(LIBmpeu) $(LIBwrf) $(LIBnetcdf) $(LIBsys) $(LIBrrcld)
+	$(F90) $(LDFLAGS) -o gsi.exe gsimain.o libgsi.a $(LIBcrtm) $(LIBsfcio) $(LIBsigio) $(LIBnemsio) $(LIBw3) $(LIBbacio) $(LIBbufr) $(LIBsp) $(LIBmpeu) $(LIBwrf) $(LIBnetcdf) $(LIBsys) $(LIBrrcld) $(LIBprpdcdr)
 	cp $(EXE_FILE) $(COREBIN)
 
 # DEPENDENCIES : only dependencies after this line (don't remove the word DEPENDENCIES)
